[project]
name = "agent"
version = "0.0.1"
description = "Lmaoo"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain[openai]>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "langgraph>=0.2.6",
    "python-dotenv>=1.0.1",
    "supabase>=2.16.0",
    "google-genai>=1.29.0",
    "langchain-google-genai>=2.1.9",
    "networkx>=3.2.1",
    "osmnx>=2.0.6",
    "matplotlib>=3.9.4",
    "rapid>=0.0.3",
    "fuzz>=0.1.1",
    "byteplus-python-sdk-v2>=3.0.7",
    "rapidfuzz>=3.13.0",
    "fastapi[standard]>=0.116.1",
    "langchain-qwq>=0.2.1",
    "dashscope>=1.24.4",
    "elevenlabs>=2.15.0",
    "moviepy>=2.2.1",
]

